oci-reader/oci-reader-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oci-reader-ing
  namespace: oci-reader
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/add-base-url: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: tls-secret
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: oci-reader-web-svc
              port:
                number: 3000
  - http:
      paths:
        - path: /oci-reader-back
          pathType: Prefix
          backend:
            service:
              name: oci-reader-back-svc
              port:
                number: 4000
